--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -18,6 +18,7 @@
     "react/jsx-filename-extension": [0],
     "jsx-a11y/anchor-is-valid": [0],
     "no-confusing-arrow": [0],
-    "no-underscore-dangle": [0]
+    "no-underscore-dangle": [0],
+    "import/no-extraneous-dependencies": [0]
   }
 }
